--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,3 @@
-/* css/styles.css */
-
 /* Reset some default styles */
 * {
     margin: 0;
@@ -114,16 +112,14 @@ header p {
 
 /* Navigation Button */
 .nav-button {
-    display: block;
-    width: 100px;
-    margin: 30px auto 0 auto;
-    padding: 10px 0;
-    text-align: center;
+    display: inline-block; /* Changed to inline-block to have buttons appear side by side */
+    padding: 10px 20px;
     background-color: #bb86fc;
     color: #ffffff;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    margin-right: 10px; /* Add space between buttons */
 }
 
 .nav-button:hover {
@@ -224,3 +220,4 @@ header p {
         height: 120px;
     }
 }
+
